# ddt

./: .gitignore  README.md  cli.py  config.json  ddt.py  main.py  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml  test_cd.yml
ddt/: cli.py  constants.py  io.py  logging.py  models.py  tokenizer.py
src/: cli.py  logging.py  main.py  models.py  parser.py  tokenizer.py
src/ddt/: __main__.py  cli.py  config.py  models.py  parser.py  tokenizer.py
src/ddt/logic/: filetree.py  input.py
src/ddt/state/: filetree.py
templates/: template.html
tests/: conftest.py  foo.html  foo.txt  output.html  output.json  output.txt  test_cli.py  test_config.py  test_integration.py  test_main.py  test_models.py  test_parser.py  test_tokenizers.py  test_units.py
tests/error_tests/: test_cli.py  test_config.py
tests/smoke_tests/: test_cli.py  test_config.py  test_integration.py  test_models.py  test_tokenizers.py
tests/test_files/: foo.txt  output.html  output.txt  testfile.txt
