[project]
name = "tokenizer"
version = "0.1.0"
description = "A CLI tool that crawls a directory and counts the tokens per filetype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=1.63.2",
    "pillow>=11.1.0",
    "tiktoken>=0.9.0",
]

# [build-system]
# requires = ["hatchling >= 1.26"]
# build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # "hatchling>=1.27.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a8",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
